--- a/sy13.md
+++ b/sy13.md
@@ -2,7 +2,559 @@
 <table>
 
 <div align="center">
-<IMG SRC="https://github.com/dfchunsring/drdr/blob/master/imgang/Sy1.jpg" width=850></a><br><h3>🌼必看 精彩视频 请直接点击 http://220.141.123.238</h3></div>
+<IMG SRC="https://github.com/dfchunsring/drdr/blob/master/imgang/Sy1.jpg" width=850></a><br><h3>🌼必看 精彩视频 请直接点击 http://	
+<table>
+
+<div align="center">
+<IMG SRC="https://github.com/dfchunsring/drdr/blob/master/imgang/SY-127.png?raw=true" width=880></a><br><h3>🌼必看 精彩视频 请直接点击 http://36.228.2.212</h3></div>
+
+<a href=https://git.io/duun><h4 align="right">探詢首頁</h4></a>
+
+
+[ <div align="center"><h2>【突破封锁看“2019圣诞及2020新年期间音乐会”】翻墙软件免费下载</h2></div>](https://git.io/ubc)
+
+<div align="center"><h2>请广传  请把握时间观赏  错过要再等一年</h2></div>
+
+<a href="#1"> <div align="center"><h2>【预告】新唐人圣诞新年期间播放神韵交响乐</h2></div></a><br>
+
+<div align="center">
+<IMG SRC="https://github.com/dfchunsring/arar/blob/master/fun.img/fun-a.jpg" width=880></a><br></div>
+<a name=list><b>目錄</b><p>
+<a href="#1">神韵交响乐</a><br>
+<a href="#2">收看新唐人神韵交响乐团的方法</a><br>
+<a href="#3">“传统之美”2019神韵交响乐波士顿落幕</a><br>
+<a href="#4">“与宇宙相连”指挥家赞神韵交响乐宏大无比</a><br>
+<a href="#5">2019神韵交响乐团 10月25日波士顿登场</a><br>
+<a href="#6">“乐器奏出的诗歌”神韵交响乐芝加哥获盛赞</a><br>
+<a href="#7">神韵交响乐 您不可错过的五大理由</a><br>
+
+<div align="center">
+<IMG SRC="https://github.com/dfchunsring/arar/blob/master/fun.img/fun-a.jpg" width=880></a><br></div>
+
+<a name=1><div align="center"><h1><a href="http://www.epochtimes.com/gb/19/12/15/n11723280.htm">神 韵 交 响 乐</a></h1></div></a><br>
+
+<h3>【大纪元2019年12月17日讯】2019年圣诞节和新年期间，新唐人电视台将独家播出《2018神韵交响乐团音乐会》，即分别在纽约、休斯顿、美西、大陆、欧洲频道播放。同时，新唐人网站（www.ntdtv.com）首页直播窗口和Roku也同步播放，时长90分钟。
+
+神韵交响乐是风靡全球的神韵艺术团原创作品，结合了东西方正统音乐的精髓，以西方管弦乐为基奠烘托中国乐器的特色，再现中华音乐传统、重现失传的美声唱法，每年都推出全新的原创曲目，带给观众盛大的音乐飨宴，好评如潮。</h3>
+
+<div align="center">
+<IMG SRC="https://github.com/dfchunsring/drdr/blob/master/imgang/SY-127.png?raw=true" width=880></a><br></div>
+
+<h3>“神韵的音乐非常灿烂，散发一种能量的光芒。非常不寻常的正面能量，有一种解脱、很安详的气氛，让人回到了反璞归真的感觉。”被列于“牛津世界音乐名人录”的国际钢琴家宋允鹏赞道。
+有着百年历史的罗曼德管弦乐团的首席小提琴家伯格丹．兹沃特安卢（Bogdan Zvoristeanu）赞叹：“音乐极为感人，古今结合的乐器演奏将我们带入另外的时空，带到那遥远的、非常干净、非常纯洁、充满真相的地方。”</h3>
+
+<h3>应观众要求，新唐人今年圣诞、新年期间将再次播出的《2018神韵交响乐团音乐会》，各频道播出时间：</h3>
+
+<div align="center"><h2>2019圣诞节期间<p></h2></div>
+
+
+<table>
+<div align="center"><h3>
+播出时间如下（均为当地时间）：<p></h3></div>
+
+<div align="center"><h2>《2018神韵交响乐团音乐会》播出时间<p>
+ 
+大陆	<p></h2></div>
+<tr>
+	<td width=293;>日期</td>
+	<td width=293;>时间</td>
+	<td width=293;>备注</td>
+</tr>	
+<tr>
+	<td width=293;>星期二  12/24/2019     Tue</td>
+	<td width=293;>20:30</td>
+	<td width=293;>《神韵交响乐团音乐会》首播</td>
+</tr>		 
+
+<tr>
+	<td width=293;>星期三  12/25/2019    Wed</td>
+	<td width=293;>9:30</td>
+	<td width=293;>《神韵交响乐团音乐会》重播</td>
+</tr>		
+	<tr>
+	<td width=293;>星期三  12/25/2019    Wed</td>
+	<td width=293;>14:00</td>
+	<td width=293;>《神韵交响乐团音乐会》重播</td>
+</tr>	   
+</table>
+
+<div align="center"><h2>2020新年期间<p></h2></div>
+<div align="center"><h3>《2018神韵交响乐团音乐会》播出时间<p></h3></div>
+
+<table>
+	
+<tr>
+	<td width=293;>日期</td>
+	<td width=293;>时间</td>
+	<td width=293;>备注</td>
+</tr>	
+<tr>
+	<td width=293;>星期二  12/31/2019     Tue</td>
+	<td width=293;>20:00</td>
+	<td width=293;>《神韵交响乐团音乐会》首播</td>
+</tr>		 
+
+<tr>
+	<td width=293;>星期三  1/1/2020    Wed</td>
+	<td width=293;> 14:00</td>
+	<td width=293;>《神韵交响乐团音乐会》重播</td>
+</tr>		
+</table>
+
+<a href=#list><h5 align="right">回目錄</h5></a>
+<div align="center">
+<IMG SRC="https://github.com/dfchunsring/wer/blob/master/img-mf/b_simple_37_3M.png?raw=true" width=880></a><br></div>
+
+<table>
+
+<a name=2><div align="center"><h1>收看新唐人神韵交响乐团的方法<p></h1></div></b>
+
+<h3>	
+<tr>
+	<td width=490;>收视方法</td>
+	<td width=400;>软件下载</td>
+</tr>
+<tr>	
+	<td>1.大陆观众可通过韩星五号的新唐人中国频道收看</td>
+	<td><a href='https://git.io/2Ead'>播出参数</a></td>
+</tr>	
+	
+<tr>
+	<td>2.爱博电视桌机版(*特別推薦*)</td>
+	<td><a href='https://github.com/dfchunsring/drdr/blob/master/fg/Green_iPPOTV.exe?raw=true'>爱博电视IPPOTV </a></td>
+</tr>		
+
+<tr>
+	<td>3.通过翻墙软件</td>
+	<td><a href='https://github.com/dfchunsring/wer/blob/master/fq/fangqians.epub?raw=true'>下载详细说明书</a></td>
+</tr>
+
+<tr>
+	<td>点击下载翻墙软件</td>
+	<td><a href='https://github.com/dfchunsring/wer/blob/master/epgh.md'>翻墙软件下载</a></td>
+</tr>
+
+<tr>
+	<td>爱博电视安裝请看桌机板教学</td>
+	<td><a href='https://github.com/dfchunsring/drdr/blob/master/intdv-installation-teaching/iPPOTV.mp4?raw=true'>爱博桌机板教学 </a>
+</td>
+</tr>
+</h3>
+</table>
+
+<p><p><p><p>
+
+<IMG SRC="https://github.com/dfchunsring/drdr/blob/master/fg/INTDTV-1.png?raw=true" width=300>
+<td>
+<h3><a href='https://github.com/dfchunsring/drdr/blob/master/fg/iNTD_TV2.1.13.apk?raw=true'>新唐人安卓版 iNTD TV （Version: 2.1.13）</a> <p>
+StarP2P和新唐人联手推出新唐人安卓版，iNTD TV。新唐人安卓版 iNTD TV 可以用于安卓机顶盒，平板电脑，和手机。在安装安卓版 iNTD TV 后，中国大陆用户无需借助翻墙工具，可以直接通过安卓版 iNTD TV 收看新唐人直播或点播节目。</h3></td>
+
+<p><p>
+
+<IMG SRC="https://github.com/dfchunsring/drdr/blob/master/fg/IPPOTV944B2-2.png?raw=true" width=300>
+<td>
+<h3>爱博电视 (iPPOTV)</h3><p><p>
+<h3><a href='https://github.com/dfchunsring/drdr/blob/master/fg/Green_iPPOTV.exe?raw=true'>爱博电视PC版 (iPPOTV)</a></h3> <p>
+<h3>一款用于实时视频流共享的软件平台，高效稳定的视频传输技术带给用户崭新的视听体验。爱博电视具有突破封锁的得天独厚的优势。</h3></td>
+
+
+<p><p>
+
+<div align="center"><h2>特別推薦~  <a href='https://github.com/dfchunsring/drdr/blob/master/fg/Green_iPPOTV.exe?raw=true'>*爱博电视桌机版* </a></h2></div>
+
+
+<div align="center">
+<IMG SRC="https://github.com/dfchunsring/wer/blob/master/img-mf/b_simple_37_3M.png?raw=true" width=880></a><br></div>
+
+<table>
+
+<br />
+
+<div align="center"><h2>请收藏  https://git.io/dic 这个网址，随时再度访问这个页面。</h2> </div></br>
+  
+
+<div align="center"><h1>请先下载翻墙软件及爱博电视IPPOTV</h1></div>
+
+<h3>这场音樂会只限于中国大陆地区收看。 请通过翻墙软件自由门、无界浏览或iNTD TV看观
+，并请锁定中国频道这个网址：<a href="http://www.ntdtv.com/xtr/gb/tv_ch1china.html">http://www.ntdtv.com/xtr/gb/tv_ch1china.html</a><h3>
+
+</table>
+
+
+<br />
+
+<h3>大陆观众请通过翻墙软件自由门或无界浏览观看。还可通过卫星天线接收、爱博电视软件、新唐人安卓版、无界一点通等方式观看。</h3>
+
+<h4><a href='http://zh-tw.shenyun.com/'>海外观众如要观看最新的〝神韵晚会″，请到当地剧院买票观看，演出行程请查询：http://www.shenyun.com </a></h4>
+
+<h2>翻墙软件自由门'无界浏览。无界一点通最新版下载地址：<a href='https://github.com/dfchunsring/wer/blob/master/epgh.md'>（git.io/epf）</a></h2>
+
+<a href=#list><h5 align="right">回目錄</h5></a>
+
+<div align="center">
+<IMG SRC="https://github.com/dfchunsring/arar/blob/master/fun.img/fun-a.jpg" width=880></a><br></div>
+
+<a name=3><div align="center"><h1>“传统之美”2019神韵交响乐波士顿落幕<p></h1></div></b>
+
+<div align="center">
+<IMG SRC="https://github.com/dfchunsring/arar/blob/master/fun.img/fun-1.jpg" width=880></a><br>10月25日晚，在波士顿交响乐厅119年历史的铜黄色殿堂下，随着神韵交响乐团《康熙大帝》一曲震撼结束，全体观众起立鼓掌，经久不歇。直到两位指挥家分别献上一首安可曲，观众们才缓缓离开。（戴兵／大纪元）</div><p>
+
+【大纪元2019年10月26日讯】（大纪元美国波士顿记者站报导）在波士顿交响乐厅119年历史的铜黄色殿堂下，上千观众起立鼓掌，台上音乐家们鞠躬致意。在这一瞬间没有人移动，时间仿佛凝固。
+
+10月25日晚，神韵交响乐团2019年度的最后一场演出让波士顿观众陶醉不已。在一个半小时的演出中，现场气氛非常热烈。每一首乐曲之后，都有观众高呼“Bravo！”。随着《康熙大帝》一曲震撼结束，全体观众起立鼓掌，经久不息，直到两位指挥家又分别献上一首安可曲，观众仍意犹未尽。有很多人在询问下一场的演出时间。
+
+在交响乐厅场外，正在等车或交谈的观众向路过的神韵音乐家挥手、竖起大拇指致意，称赞他们“优雅大方”（graceful）、“才华出众”（talented）。
+
+<div align="center">
+<IMG SRC="https://github.com/dfchunsring/arar/blob/master/fun.img/fun-2.jpg" width=780></a><br>2019年10月25日，享誉全球的神韵交响乐团光临波士顿交响乐厅（Boston Symphony Hall），为观众带来一场东西方音乐合璧的精彩演出。图为二胡三重奏。（戴兵／大纪元）</div><p>
+
+<div align="center">
+<IMG SRC="https://github.com/dfchunsring/arar/blob/master/fun.img/fun-3.jpg" width=780></a><br>2019年10月25日，享誉全球的神韵交响乐团光临波士顿交响乐厅（Boston Symphony Hall），为观众带来一场东西方音乐合璧的精彩演出。（戴兵／大纪元）</div><p>
+
+<div align="center">
+<IMG SRC="https://github.com/dfchunsring/arar/blob/master/fun.img/fun-4.jpg" width=780></a><br>2019年10月25日，享誉全球的神韵交响乐团光临波士顿交响乐厅（Boston Symphony Hall），为观众带来一场东西方音乐合璧的精彩演出。图为小提琴演奏家郑媛慧在独奏。（戴兵／大纪元）</div><p>
+
+<div align="center">
+<IMG SRC="https://github.com/dfchunsring/arar/blob/master/fun.img/fun-5.jpg" width=780></a><br>2019年10月25日，享誉全球的神韵交响乐团光临波士顿交响乐厅（Boston Symphony Hall），为观众带来一场东西方音乐合璧的精彩演出。（戴兵／大纪元）</div><p>
+
+<div align="center">
+<IMG SRC="https://github.com/dfchunsring/arar/blob/master/fun.img/fun-6.jpg" width=780></a><br>10月25日晚，在波士顿交响乐厅119年历史的铜黄色殿堂下，随着神韵交响乐团《康熙大帝》一曲震撼结束，全体观众起立鼓掌，经久不歇。直到两位指挥家又分别献上一首安可曲，观众们才缓缓离去。（戴兵／大纪元）</div><p>
+
+<a name=4><h1>“与宇宙相连”指挥家赞神韵交响乐宏大无比</h1>
+
+<div align="center">
+<IMG SRC="https://github.com/dfchunsring/arar/blob/master/fun.img/fun-7.jpg" width=680></a><br>指挥家兼音乐家Arthur Comegno与友人Kathleen于10月25日晚，在波士顿交响乐厅，聆听了神韵交响乐团的音乐会。（甄秀欣／大纪元）</div><p>
+
+
+“神韵交响乐团宏大无比。”指挥家兼音乐家Arthur Comegno盛赞神韵交响乐团的音乐“神奇美妙”，他表示自己也想加入其中，共享音乐中的神性内涵。
+
+指挥家Arthur Comegno感到神韵音乐具有神圣的启迪与宇宙相关，他认为，“音乐是有共性的”，在听到某些乐句时，Comegno有着独特的体验，“他们好像飞到了云端、飞向了神。特别是用弦乐器拨弦，好似在战车上俯视战马，冲向天空。”他说，“有很多的爱和情感，我试图描绘——将每个曲目中的每个段落整合起来，太优美了！”
+
+“我看到了神韵音乐与宇宙的相连，表现了爱、神性所有这些事情，我看到他们之间的连接。”他认为神韵交响乐团诠释了“一个非常好的理念”，“我希望回来再听一遍”。
+
+Comegno有着丰富的指挥经验，指挥过许多大型音乐会，同时，他还做过专业小提琴手，培训过许多音乐人；他也是一名演员、导演，毕业于伊士曼音乐学院和哈佛大学。他从神韵音乐中看到了“西方音乐与亚洲音乐、中国音乐的结合”。他表示，“我也曾学过中国琴。我知道一些关于中国音乐的东西。”
+
+他认为神韵交响乐团东西方合璧让整场音乐会中的乐声更加“美妙动听”，他觉得神韵“非常宏大”。“作为一个音乐家，我非常密切地看着交响乐团，数着七个低音演奏家、十个大提琴、十四个第一小提琴、十四个二级小提琴、中提琴，有趣的是，指挥有一个中提琴谱架，第一中提琴手的谱架。” Comegno娓娓道来。
+
+“打击乐做了所有这些奇妙的事情，还有特殊的中国乐器。”他说，“我能说的最好的事情是：这是一场精彩的音乐会，我很惊讶和不知所措，所以我很高兴我来了。”
+
+他赞叹神韵演奏家的技艺非凡，“哦，他们太棒了！我真的很喜欢他们。”
+
+Kathleen也赞佩道：“神性贯穿在整个交响乐团，你能感觉到她。她美丽，令人沉思、反省，以及充满了能量活力。这是探索中国文化的另一部分。所以我很高兴我们今晚来了。”
+
+<h2>金融公司副总裁：感受生命的喜悦</h2>
+
+<div align="center">
+<IMG SRC="https://github.com/dfchunsring/arar/blob/master/fun.img/fun-8.jpg" width=680></a><br>10月25日晚，一家在全美四地拥有分支机构的金融公司副总裁Phil Dawicki携同太太和儿子观赏神韵交响乐团演出，体会到音乐振奋人心的力量。（新唐人电视台）</div><p>
+
+一家在全美四地拥有分支机构的金融公司副总裁Phil Dawicki说，他的太太和儿子曾观赏神韵艺术团的演出。当时他无缘同行，但这次总算能与他们分享这场“极其出色”的音乐会。
+
+Dawicki说，神韵音乐感动他的不仅仅是东西方音乐的完美融合，更是音乐本身振奋人心的力量。
+
+“音乐时而轻盈，时而激昂。”他说，“音乐动感十足，有种耳目一新的感觉。”
+
+Dawicki一家对神韵音乐的能量感受深刻。“这音乐就像扑面而来的风，带有声音的风，如此振奋人心，令你感到生命的喜悦。”他说。
+
+<a>前芭蕾舞演员：神韵音乐带我去了另一个世界</a>
+
+<div align="center">
+<IMG SRC="https://github.com/dfchunsring/arar/blob/master/fun.img/fun-9.jpg" width=680></a><br>前芭蕾舞演员Eleana Santorineou带着儿子于 10月25日晚在波士顿交响乐厅欣赏了神韵交响乐团2019年度的最后一场演出。（新唐人电视台）</div><p>
+
+前芭蕾舞演员Eleana Santorineou与儿子聆赏之后，久久不愿离开。她说，神韵音乐内涵超越了这个小小的地球。这场演出带她去了另外一个世界，让她对中华历史和文化心生敬意。
+
+“我们真不想离开这里，我们想在这里继续聆听下去⋯⋯”她说：“让人的身心得到升华，变得心绪宁静美好，让人想继续聆下去。”
+
+“我还体会到，这种音乐有一层内涵超越了我们所在的这个小小的地球，将我们的灵魂带到了另外一个地方。”
+
+她说，非常佩服神韵交响乐团的音乐家，作为艺术家，她知道这场音乐会的难度很大，因此当她看到观众请求舞台上的艺术家加演时，她才非常感动，“因为我知道要达到这种水准需要如何的付出，我知道观众要求加演的请求，才是对演员情感上最好的奖励，他们的惊叹声和掌声，才是对艺术家们最重要的鼓励。”
+
+<h2>杨建利：神韵带来传统之美 意义重大</h2>
+
+<div align="center">
+<IMG SRC="https://github.com/dfchunsring/arar/blob/master/fun.img/fun-10.jpg" width=680></a><br></div>10月25日晚，二十一世纪中国基金会会长、公民力量召集人杨建利专程从华盛顿DC来到波士顿欣赏神韵交响乐团的演出，并赞叹“不虚此行”。（新唐人电视台）<p>
+
+
+二十一世纪中国基金会会长、公民力量召集人杨建利专程从华盛顿DC来到波士顿欣赏神韵交响乐团的演出，并赞叹“不虚此行”。
+
+杨建利说：“这场演出的意义非常重大，因为她在用传统的美、善、爱，替代中共丑、恶的糟粕文化。”他称赞，神韵交响乐用传统的美和善来唤起人们对正统、传统之美的认识。在欣赏音乐会时，他感到美的享受。
+
+杨建利盛赞神韵交响乐的水平非常高，大部分节目都是原创曲目，而且蕴含着中华文化。“我从音乐中听出来一些真、善、美的元素，这种感触非常深。”
+
+他还谈到，此前他曾看过神韵艺术团的演出，但这是第一次欣赏神韵交响乐音乐会。他认为，中共已破坏了中华文化，损害了人们对美的感受和追求。因而在此时此刻，神韵艺术为人们排除丑恶，带来传统之美，就显得尤为重要。#
+
+责任编辑：夏晶
+
+<a href=#list><h5 align="right">回目錄</h5></a>
+<div align="center">
+<IMG SRC="https://github.com/dfchunsring/arar/blob/master/fun.img/fun-a.jpg" width=880></a><br></div>
+
+<a name=5><div align="center"><h1>2019神韵交响乐团 10月25日波士顿登场<p></h1></div></b>
+
+<div align="center">
+<IMG SRC="https://github.com/dfchunsring/arar/blob/master/fun.img/fun-11.jpg" width=880></a><br></div>2018年10月13日下午，神韵交响乐团在波士顿交响音乐厅(Boston Symphony Hall)演出。小提琴家郑媛慧独奏了一首曲子。(艾文/大纪元)<p>
+
+【大纪元2019年10月19日讯】金秋时节，“神韵交响乐团”于9月、10月间在台湾和北美5大城市进行2019年的巡演，其中10月25日晚8点将第7度莅临波士顿交响音乐厅(Boston Symphony Hall)，带来一场东西方音乐珠联璧合的精彩压轴演出。这是神韵交响乐团今年巡演的最后一个城市。在此之前，神韵交响乐团9月份起在台湾9大城市进行了11场演出，售票率几乎百分百，再度创下场场大爆满的票房纪录，也再次创下台湾艺文界票房奇迹。
+
+接着于10月6日在加拿大多伦多汤姆森音乐厅、12日纽约卡内基音乐厅(两场)、13日华府斯特拉斯莫尔音乐中心、19日芝加哥交响中心管弦乐厅各演出一场。
+
+<h2>神韵原创音乐丰富精彩</h2>
+	
+神韵艺术团的曲目，根植于中华五千年的文明历史，融合了东西方正统音乐的精髓。这些作品，从各朝各代的历史和灿若星辰的人物中获得灵感，复兴着亘古的主题与旋律。以西方管弦乐为基奠烘托中国乐器的特色，以古老中国音乐的旋律韵味为基础，用西方管弦乐来表现神韵所需要的效果，这是新的开创。很多听过神韵交响乐的观众都说“神韵正在开启古典音乐的新篇章！”
+
+根据神韵网站介绍，今年演出曲目包括最受观众喜爱的神韵原创作品，以及西方经典曲目，如德弗札克、法兰兹苏佩、柴可夫斯基等名家的不朽作品。
+
+在神韵原创音乐方面，从令人难忘的二胡独奏，到气势恢弘的皇家风格进行曲，到富有民俗风情的民间旋律，神韵原创音乐丰富而精彩纷呈。自2017年开始，神韵推出了描述中国一代帝王系列的原创曲目，已经发表过的包括《大汗》、《贞观之治》，气势恢宏，震撼人心。那么今年，他们又将给观众们带来什么惊喜呢？
+
+<h2>演奏西方古典名曲</h2>
+
+在西方古典名曲方面，今年的曲目有柴可夫斯基的Waltz-Scherzo诙谐圆舞曲，作品第34号；古诺的罗密欧与朱丽叶第四幕进行曲等等。神韵交响乐以完整的西方交响乐为载体，融合古老的中国乐器，如以二胡、琵琶以及打击乐为领奏，全新演绎这些人类历史上长久流传的乐章。
+
+在神韵交响乐团的演出中，观众可以听到这一串音符宛如战场上万马奔腾，那一串音符又如彩云间仙袂翩飞；这一段旋律余韵悠长，那一段旋律又触动了心弦，彷如记忆深处的场景。神韵脸书介绍，这些乐曲之所以如此生动，不仅是因为他们曾是舞蹈的伴奏，也是因为他们的创作灵感来源于几千年人类历史的文化底蕴……。
+
+那么，神韵独特的音乐是如何产生的？如果在欣赏神韵原创作品的同时，也了解一下作品背后的故事、文化和独特的元素，将有助于更深刻地理解作品，请关注神韵脸书@shenyunperformingarts(英文)或@shenyunZH(中文)，上面有精辟的介绍。
+
+神韵交响乐团波士顿演出时间：10月25日(周五)晚上8点，波士顿交响音乐厅地址：301 Massachusetts Ave., Boston, MA 02115。票价：$108、$88、$78、$58、$48、$38。电话：888-974-3698、888-266-1200，详情及购票请登录：http://shenyun.com。◇
+
+责任编辑：冯文鸾
+
+<a href=#list><h5 align="right">回目錄</h5></a>
+<div align="center">
+<IMG SRC="https://github.com/dfchunsring/arar/blob/master/fun.img/fun-a.jpg" width=880></a><br></div>
+
+<a name=6><div align="center"><h1>“乐器奏出的诗歌”神韵交响乐芝加哥获盛赞<p></h1></div></b>
+
+<div align="center">
+<IMG SRC="https://github.com/dfchunsring/arar/blob/master/fun.img/fun-12.jpg" width=880></a><br></div>2019年10月19日，神韵交响乐团在芝加哥交响乐中心（Symphony Center Orchestra Hall）演出。（陈虎／大纪元）<p>
+
+【大纪元2019年10月20日讯】（大纪元美国芝加哥记者站报导）10月19日，神韵交响乐团在芝加哥交响乐中心（Symphony Center Orchestra Hall）演出。演出结束后，观众掌声雷鸣，观众起立鼓掌，久久不愿离去，神韵加演两首安可曲才谢幕。
+
+一位乐队指挥盛赞，这是乐器演奏出的诗歌。一位职业音乐人赞神韵把东西方两大音乐体系完美结合，实乃作曲家之功。一位公司总裁赞音乐令他回想起神韵的精彩节目，如见天国世界。一位心理医生赞音乐深富灵性扣人心弦。多名商业精英赞“如精神之旅”、“游历中华文化”。
+
+<div align="center">
+<IMG SRC="https://github.com/dfchunsring/arar/blob/master/fun.img/fun-13.jpg" width=780></a><br></div>2019年10月19日，神韵交响乐团在芝加哥交响乐中心（Symphony Center Orchestra Hall）演出。 （陈虎/大纪元）<p>
+
+<div align="center">
+<IMG SRC="https://github.com/dfchunsring/arar/blob/master/fun.img/fun-14.jpg" width=780></a><br></div>2019年10月19日，神韵交响乐团在芝加哥交响乐中心（Symphony Center Orchestra Hall）演出。图为小提琴演奏家郑媛慧的独奏演出。（陈虎/大纪元）<p>
+
+<div align="center">
+<IMG SRC="https://github.com/dfchunsring/arar/blob/master/fun.img/fun-15.jpg" width=780></a><br></div>2019年10月19日，神韵交响乐团在芝加哥交响乐中心（Symphony Center Orchestra Hall）演出。图为二胡三重奏演出。（陈虎/大纪元）<p>
+
+<div align="center">
+<IMG SRC="https://github.com/dfchunsring/arar/blob/master/fun.img/fun-16.jpg" width=780></a><br></div>2019年10月19日，神韵交响乐团在芝加哥交响乐中心（Symphony Center Orchestra Hall）演出。图为谢幕照。（陈虎/大纪元）<p>
+
+
+<h2>乐团指挥：有一种瞬间即逝之美</h2>
+
+<div align="center">
+<IMG SRC="https://github.com/dfchunsring/arar/blob/master/fun.img/fun-17.jpg" width=680></a><br></div>乐队指挥John Vishneski欣赏了10月19日下午神韵交响乐团在芝加哥交响中心管弦乐厅（Chicago Symphony Center）的交响乐演出。（新唐人电视台）<p>
+
+John Vishneski是芝加哥交响乐团的客座黑管音乐家，也是芝加哥律师协会爵士乐团的指挥。他对神韵交响乐团将东西方乐器融合在一起的方式感到惊叹，“我欣赏西方乐器的华丽，更欣赏乐团里西方乐器与琵琶、二胡等中国乐器融合在一起的方式，真是令人惊叹，太美好了！”
+
+他表示，神韵交响乐带给他与众不同的感受，“当中有震撼力、有美，有一种瞬间即逝的美的感觉，就像诗歌一样，但是用乐器（演奏出的诗歌）。”
+
+<h2>公司总裁聆听神韵音乐 想起天国世界</h2>
+
+<div align="center">
+<IMG SRC="https://github.com/dfchunsring/arar/blob/master/fun.img/fun-18.jpg" width=680></a><br></div>2019年10月19日，工业设计公司总裁Chuck Bokar和太太、心理医疗诊所老板Laura Bokar 观看了神韵交响乐团在美国芝加哥交响中心管弦乐厅的演出。（唐明镜／大纪元）<p>
+
+芝加哥一家工业设计公司总裁Chuck Bokar看过2019年的神韵艺术团演出，这次特意来感受神韵交响乐。“上半场最后那首曲子，讲述了蒙古的故事，你可以听到……好像是在战马嘶鸣的音乐，这让我想到了数千年前。”
+
+“第一个乐曲让我想起了天国世界， 那首乐曲轻盈灵动， 让我想起了舞蹈演员飞舞着的长裙。”Bokar先生说。
+
+<h2>聆赏神韵交响乐 报社总经理如游历中华朝代</h2>
+
+<div align="center">
+<IMG SRC="https://github.com/dfchunsring/arar/blob/master/fun.img/fun-19.jpg" width=680></a><br></div>报社总经理Lukasz Dudka欣赏了10月19日下午神韵交响乐团在芝加哥交响中心管弦乐厅（Chicago Symphony Center）的交响乐演出。（新唐人电视台）<p>
+	
+芝加哥波兰社区最大报纸波兰日报总经理Lukasz Dudka说：“欣赏这场音乐会就如同一场对中华文化和历史的游历，我们在聆听音乐会的演奏中游历了中华所有的朝代，而且每首曲子都有不同的音乐韵味。”
+
+身为东欧人的Dudka说，“我只能想像如果我是一个中国人，坐在美国（的音乐厅）里聆听这样的音乐，受到如此深远的文化的启迪，这种体验深入我的灵魂，真是非常美好，太令人赞叹了！”
+
+<h2>心理医师：神韵音乐富有灵性</h2>
+	
+<div align="center">
+<IMG SRC="https://github.com/dfchunsring/arar/blob/master/fun.img/fun-20.jpg" width=680></a><br></div>2019年10月19日，心理学家Greg Dziedzic观看了神韵交响乐团在美国芝加哥交响中心管弦乐厅的演出。（唐明镜／大纪元）<p>
+	
+Greg Dziedzic 在芝加哥一个波兰社区机构担任主持心理医师。他说：“当我倾听音乐时，我感觉犹如在体验一个个故事，有浪漫、有战斗也有戏剧。我不清楚具体的故事情节，但每一首音乐都在生动地讲述着一个故事。”
+
+他表示从神韵音乐中感受到“深邃的精神力量”，“她很有灵性。很难描述这种感受，就觉得她抓住了你的心弦，令你思绪万千。从这一层面讲，整个音乐会实乃精神之旅。”
+
+<h2>神韵音乐中西合璧 乐队歌手赞天衣无缝</h2>
+
+<div align="center">
+<IMG SRC="https://github.com/dfchunsring/arar/blob/master/fun.img/fun-21.jpg" width=680></a><br></div>2019年10月19日，乐队歌手Jeff Perry 和太太Heather Perry观看了神韵交响乐团在美国芝加哥交响中心管弦乐厅的演出。（唐明镜／大纪元）<p>
+
+Jeff Perry出生于一个音乐家庭，母亲是合唱歌手，父亲是指挥，而他在一个摇滚乐队任歌手。他说：“神韵音乐非常的独特，这令我很欣赏。我觉得这种差异很可能源自于文化，她蕴含的中国文化，听起来卓尔不群。”
+
+Perry表示：“我感觉是作曲家的创作把这（东西方两大音乐体系）成功的结合起来。他很有深意，充分表现了各种不同的乐器特点。如此的天衣无缝，如此的美丽悦耳。”
+
+<h2>听神韵音乐 医生体验天人合一</h2>
+
+<div align="center">
+<IMG SRC="https://github.com/dfchunsring/arar/blob/master/fun.img/fun-22.jpg" width=680></a><br></div>医生Ibrahim Sadek欣赏了10月19日下午神韵交响乐团在芝加哥交响中心管弦乐厅（Chicago Symphony Center）的交响乐演出。（新唐人电视台）<p>
+
+医生Ibrahim Sadek专程从芝加哥西郊前来欣赏音乐会。“我觉得（她）真的触动了我的灵魂，那音乐给你一种轻灵的感觉，让你享受其中，与音乐合而为一。”
+
+Sadek赞叹：“音乐触动你的灵魂、触动你的心灵，激发出不同的情感——我首先想到的是‘欢乐’，以及一种‘合一’（ togetherness）的感觉，与生命、与周围的环境，以及生命中的一切都是谐和的一体。”
+
+责任编辑：夏晶
+	
+<a href=#list><h5 align="right">回目錄</h5></a>
+<div align="center">
+<IMG SRC="https://github.com/dfchunsring/arar/blob/master/fun.img/fun-a.jpg" width=880></a><br></div>
+
+<a name=7><div align="center"><h1>神韵交响乐 您不可错过的五大理由<p></h1></div></b>
+
+<div align="center">
+<IMG SRC="https://github.com/dfchunsring/arar/blob/master/fun.img/fun-23.jpg" width=880></a><br></div>图为2017年9月30日晚上，神韵交响乐团于台湾彰化员林演艺厅演出。（陈霆／大纪元）<p>
+	
+【大纪元2018年07月27日讯】（大纪元记者李韵台湾报导）9月13日至27日，美国神韵交响乐团即将三度莅临台湾，在十大城市，用音乐带给乐迷们满满的正面能量，就如同美国医学教授Mark Engelman所说的：“如此优美的音乐，绝非来自地球。若这无法打动你（Go to your soul：深入你的灵魂），就再没有能感动你的了！”
+
+美国神韵艺术团自2006年创立以来，现场伴奏乐团一直是其重要的组成部分。随着艺术团的世界巡演，每一首根植于五千年文明的原创乐曲，让中国古典舞发挥更大穿越心灵的力量，她们充分发挥了净化与疗愈的深刻影响力。应神韵观众的强烈要求，希望可以通过音乐会的形式欣赏神韵音乐，于是神韵交响乐团于2012年正式成立。
+
+<div align="center">
+<IMG SRC="https://github.com/dfchunsring/arar/blob/master/fun.img/fun-24.jpg" width=880></a><br></div>2017年10月14日晚间，神韵交响乐的天籁之音在卡内基大厅（Carnegie Hall）响起，纽约主流观众欣赏了一场顶级音乐盛宴。（戴兵／大纪元）<p>
+
+2012年10月28日，纽约市政府上午虽已发出超级飓风预报，然而当天神韵交响乐团在卡内基音乐厅首演时，竟有二千多纽约观众无畏飓风通报前往聆赏，演出结束时全场起立，鼓掌长达三分钟。
+
+2017年9月神韵交响乐团第二度来台演出15场，有近2万名观众现场观赏，特有的“安可现象”从第一场音乐会竟无间断持续延烧到最后一场，为了再听一首安可曲，观众边拍手边流眼泪，“安可”喊到喉咙沙哑，古典乐迷的热情空前。
+
+<div align="center">
+<IMG SRC="https://github.com/dfchunsring/arar/blob/master/fun.img/fun-25.jpg" width=680></a><br></div>2017年9月27日晚上，斗六市长谢淑亚观赏神韵交响乐团在云林县文化处表演厅的演出。（郑顺利／大纪元）<p>
+
+“就今夜，今夜不要停止！如果时间停留在这一点该有多好！”云林县斗六市长谢淑亚2017年9月27日晚间观赏美国神韵交响乐的演出，当晚她最大的愿望是，“就一直这样子欣赏下去，今夜不回家！”
+
+美国神韵交响乐结合东西方乐器的精髓，将中华音乐的韵律与灵性，透过独特的配器与演奏技法，呈现出精准、辉煌的宏大气势，却又柔美动听、撩人心弦。9月要听音乐会，只听神韵交响乐，以下是必听的五大理由：
+
+<h2>一、“神级”原创乐曲，曲目独一无二</h2>
+
+《乐记》中讲“圣人作乐以应天”，其实这正是华夏文化的传统。
+
+翻开各古典音乐会节目单，会发现世界级的交响乐团，多数是演奏前人大师的经典作品，而“原创曲目”却是神韵音乐会获得巨大成功的关键元素。
+
+神韵音乐会除了演奏西方名家经典曲目外，最主要是演奏神韵艺术团各年度原创音乐作品的精华。有乐迷分享表示，这些原创曲目功力已达神级。资深古典乐迷不禁想追问，到底“神”在哪里？
+
+澳洲钢琴家Nestor Palma说：“音乐美得不可思议，像来自天上。”
+
+<div align="center">
+<IMG SRC="https://github.com/dfchunsring/arar/blob/master/fun.img/fun-26.jpg" width=680></a><br></div>2018年2月16日，当代英国最成功和最受尊敬的音乐家之一Joy Farrall观看了神韵纽约艺术团在伦敦的演出。（麦蕾／大纪元）<p>	
+	
+“产生的效果是如此浑然天成，又非常传统，真是神奇！”英国当代最受尊敬的音乐家之一单簧管演奏家Joy Farrall表示，“神韵音乐具有一层又一层的深意，身为音乐家，我为此感到非常震撼！”
+
+<div align="center">
+<IMG SRC="https://github.com/dfchunsring/arar/blob/master/fun.img/fun-27.jpg" width=680></a><br></div>吴晋淮传唱工作室传唱人王靖源。（陈霆／大纪元）<p>
+
+“真的是‘神级’的展现！”新北市客家社团理事长彭万达表示，“好像到了天堂，到了另外一个世界。”而台湾吴晋淮传唱工作室传唱人王靖源更是赞叹道：“从第一个到最后一个音符都是感动！”“真的是‘神曲’！”
+
+
+<h3 align=center>► 只有亲自聆赏才会真正感动，观赏神韵交响乐推广片.mp4</a></h3>
+
+<div align="center"><a href="https://github.com/dfchunsring/arar/blob/master/fun.mp4/fun.mp4.mkv">
+<IMG SRC="https://github.com/dfchunsring/arar/blob/master/fun.img/fun-28.jpg" width=880></a><br></div><p>
+
+<h2>二、古老华夏乐器，引领交响乐神韵</h2>
+	
+听过神韵原创曲目的人一定会问，为何音色与韵味独特的华夏乐器与气势雄伟的西方交响乐，竟然能这样完美地交融在一起？
+
+<div align="center">
+<IMG SRC="https://github.com/dfchunsring/arar/blob/master/fun.img/fun-29.jpg" width=880></a><br></div>2017年10月3日晚间，神韵交响乐团于台北中山堂举行演出。图为二胡演奏家戚晓春、孙璐与王真的演出。（陈柏州／大纪元）<p>
+
+细心观察神韵交响乐团的编制，发现古老的华夏乐器如琵琶、二胡，直接被置入管弦乐团的中心位置，再加上磬、锣、木鱼、碰铃、中国鼓等古老打击乐器，引领着近百人的管弦乐团。加上透过特有的编曲、配器与技法，交响出绝妙生动的音乐，蕴藏丰富深厚的音乐情感，所达到谐和程度之完美，被古典音乐界视为“商业机密”或者“奇迹”。
+
+神韵艺术团作曲家净弦透露：“中西乐器搭在一起，有些乐器结合起来是可以的，有些乐器就是不可以。就像中药，都是好药，都是很贵的药，但是放在一起，有的就相冲了。”
+	
+<div align="center">
+<IMG SRC="https://github.com/dfchunsring/arar/blob/master/fun.img/fun-30.jpg" width=680></a><br></div>作曲家兼职业钢琴演奏家Pierre Guerin先生惊叹于神韵艺术家每年创作全新的作品，他表示这是很大的挑战，他要向神韵艺术家致敬。（余欣然／大纪元）<p>
+	
+加拿大作曲家与钢琴演奏家Pierre Guerin盛赞道：“演奏真的非常完美，这通常是很难成功的，有时中国传统乐器和西方乐器是很难匹配的。”“另外还有音阶的差异，我不知道他们如何解决这个问题，能合奏出如此完美谐和的音乐。”	
+	
+<div align="center">
+<IMG SRC="https://github.com/dfchunsring/arar/blob/master/fun.img/fun-31.jpg" width=680></a><br></div>加拿大著名指挥家斯特拉顿（Kerry Stratton）（新唐人电视台）<p>	
+	
+“这种音色是独一无二的，你在其它任何地方都听不到。”多伦多管弦乐团指挥凯利·斯特拉顿（Kerry Stratton）说，“神韵交响乐做到了二者的完美结合，将古老的那种乐音和较现代的西方交响乐结合起来，那种高难度，神韵做到了。”
+
+<div align="center">
+<IMG SRC="https://github.com/dfchunsring/arar/blob/master/fun.img/qr-1.jpg" width=300></a><br>只有亲自聆赏才会真正感动，请扫描QR Code试听神韵交响乐选段与影片。</div><p>	
+
+<h2>三、五千文明精髓，底蕴源远流长</h2>
+
+什么样的音符，能让抑扬顿挫的旋律谱出一篇篇各朝历史故事、一幅幅漠北江南的山川风景，还能在乐音画卷中，重现华夏古文明的化境？
+
+<div align="center">
+<IMG SRC="https://github.com/dfchunsring/arar/blob/master/fun.img/fun-32.jpg" width=880></a><br></div>2017年10月15日下午，神韵交响乐团2017巡演来到纽约卡内基大厅（Carnegie Hall）隆重上演。图为小提琴演奏家郑媛慧在演奏。（戴兵／大纪元）<p>	
+
+“那锣一敲下去，就像是盘古的开天辟地，中华文化就此揭开序曲！”福山弦乐团团长李奇伦表示，“让我想到从伏羲圣人、中华《易经》，一直到孔子传承下来；感受到我们的民族。”
+
+<div align="center">
+<IMG SRC="https://github.com/dfchunsring/arar/blob/master/fun.img/fun-33.jpg" width=680></a><br></div>2016年10月1日，福山弦乐团团长李奇伦观赏神韵交响乐团在高雄的演出。（郑顺利／大纪元）<p>	
+
+“尤其有几段让人心灵特别触动，都在流眼泪”，“音乐高潮起伏很震撼，这种传统复古的音乐风，在大陆很多都听不到了！”特地从中国四川来到台湾现场观赏演出的张姓先生分享道，“好像看到飞天、古代场景一样”，“有一股热流在身上传递，心非常静，思想也非常平静没有杂念，一心钻在‘画’里面！”
+
+“震撼、感动！”“你的血液、你的心脏，都会跟着曲子在波动。”台湾科技业CEO总经理刘亭嫣表示，“这是古代帝王才能听到的音乐”，“好像是为我们炎黄子孙写的一样。”
+
+“神韵音乐的中西乐器合璧，表现出泱泱大气！”彰化市立管弦乐团咨询委员洪采伶描述，“有中华的画面，又融入西方的元素。”“让人看到有大山、有水、有景、有气韵，整个架构层次分明。”
+
+“乐观其深”，五千文明之音的深度，让共享千年文化记忆的华人产生血液中共鸣，但是什么原因，连西方各国观众都被深深震撼了？
+
+阿根廷财政部幕僚长Pablo Quirno说：“乐团如此出色，是中华传统文化最辉煌的写照。”
+
+<div align="center">
+<IMG SRC="https://github.com/dfchunsring/arar/blob/master/fun.img/fun-34.jpg" width=680></a><br></div>Zvi Stepak是以色列领先的投资公司巨头Meitav Dash的创始人，他和太太观看了2018年3月25日神韵在以色列的演出。（麦蕾／大纪元）<p>	
+
+“当前的全球化和现代化潮流，其实是反对传统和古老语言的”，以色列投资公司巨头Meitav Dash的创始人Zvi Stepak说，“而那古老的华夏文化真让人心仪！”
+
+“保留古老的民间文化，把历史文化再现出来。”法国上普罗旺斯阿尔卑斯省蒙特菲龙市长Pierre Fischer表示，“这可是文明的基因，我们不能失去！”
+
+<h2>四、失传美声唱法，惊艳重现人间</h2>
+	
+意大利19世纪最伟大的作曲家之一Gioachino Rossini在1858年曾经哀叹：“唉，对我们来说，传统美声唱法已经遗失了！”
+
+令人惊艳的是，神韵的音乐会中不止有交响乐，还有失传的美声唱法节目。而且是由荣获各项大奖的音乐家现场中文演唱，使用的是曾流行于古老中国和欧洲、但已失传的传统美声唱法。
+
+<div align="center">
+<IMG SRC="https://github.com/dfchunsring/arar/blob/master/fun.img/fun-35.jpg" width=780></a><br></div>女高音歌唱家耿皓蓝与指挥米兰‧纳切夫以及部分演奏家。（李莎／大纪元）<p>
+
+神韵女高音歌唱家耿皓蓝表示：“随着社会潮流变迁，传统艺术逐渐失落，一百年后的今天，意大利真正传统、古典的美声歌剧唱法已经遗失了。我在学校学习的也是‘现代’的美声唱法，当我来到神韵的时候，才认识到我过去的发声位置是不对的。当然，这是非常难以掌握的，因为我们是用中文在唱。”
+
+耿皓蓝至今已在世界上百个城市演出过，她一次次用高超的演唱技巧征服了全球观众，尤其对欧美观众来说，看到西方失传已久的意大利歌剧传统唱法（Bel canto），居然被一位年轻的华裔歌唱家演绎得如此炉火纯青，不由得感慨万千。
+
+<div align="center">
+<IMG SRC="https://github.com/dfchunsring/arar/blob/master/fun.img/fun-36.jpg" width=680></a><br></div>男中音演唱家Piotr Wawrowski于2018年4月10日晚，在德国首都柏林德意志歌剧院观看了美国神韵纽约艺术团的演出。（安然／大纪元）<p>
+	
+“她有一种感人的力量，歌唱的方式很特别，我非常喜欢。”柏林德意志歌剧院合唱团男中音Piotr Wawrowski不断夸赞说，“聆听她的演唱，让我感到一种直达灵魂的震撼！”
+
+“当她吐出声音的那一瞬间，如此纯净、如此有力！”加拿大歌剧演员Thomas Franzky也大赞神韵女高音，“我研究声音22年了，熟悉美声唱法。她真的出类拔萃。仅听她的唱歌，就值回了票价！”
+
+<h2>五、感受纯正能量，体验光明希望</h2>
+	
+有乐迷透露，听神韵交响乐一定要现场去听，否则“太可惜了！”听说现场能量非常巨大，围绕暖人心扉的幸福氛围，同时感受一股强大的光明正气，换言之就是：用笔墨难以形容。
+
+<div align="center">
+<IMG SRC="https://github.com/dfchunsring/arar/blob/master/fun.img/fun-37.jpg" width=680></a><br></div>2018年2月27日晚间，钢琴大师、大键琴家宋允鹏观赏神韵国际艺术团在台北国父纪念馆的演出。（白川／大纪元）<p>
+
+“整个制作都非常令人感动，整个能量都出来了！”名列“牛津世界音乐名人录”的国际钢琴家及大键琴演奏家宋允鹏表示，“演出的背后有一种能量的支持，让五千年的文化继续发挥、发光”，“非常、非常不寻常的正面能量，可以让人感觉很安全，有一种解脱、很安详的气氛”，“是反璞归真的感觉。”
+
+不止台湾乐迷，神韵音乐逸出的正气与能量强大，全球都很“有感”，奥地利驻阿根廷大使Johannes Christoph MeranMeran表示：“这种能量在你身体里流转，让人获得一种非常祥和友善的感觉。”
+
+“神韵展示了五千年神传文化的精髓”，澳洲舞蹈评审Darren Carey表示，“即便是我九岁的孩子，都能领悟到演出中蕴含的神性”，“对我来说，神基本上是另一种能量之源！”◇#
+
+只有亲自聆赏才会真正感动，观看观众分享感动的影片»
+
+<div align="center">
+<IMG SRC="https://github.com/dfchunsring/arar/blob/master/fun.img/fun-38.jpg" width=680></a><br></div><p>
+
+<div align="center">
+<IMG SRC="https://github.com/dfchunsring/arar/blob/master/fun.img/fun-39.jpg" width=680></a><br></div>2017年10月3日晚间，神韵交响乐团于台北中山堂举行演出。（陈柏州／大纪元）<p>
+	
+	
+
+	
+	
+<a href=#list><h5 align="right">回目錄</h5></a>	
+
+<div align="center">
+<IMG SRC="https://github.com/dfchunsring/nini/blob/master/M-truth.img/b_illust_11_2M.png?raw=true" width=880></a><br></div>
+</h3></div>
 
 <a href=https://git.io/duun><h4 align="right">探詢首頁</h4></a>
 
