--- a/sy13.md
+++ b/sy13.md
@@ -2,192 +2,9 @@
 <table>
 
 <div align="center">
-<IMG SRC="https://github.com/dfchunsring/drdr/blob/master/imgang/Sy1.jpg" width=850></a><br><h3>🌼必看 精彩视频 请直接点击 http://		
+<IMG SRC="https://github.com/dfchunsring/drdr/blob/master/imgang/Sy1.jpg" width=850></a><br><h3>🌼必看 精彩视频 请直接点击 http://36.228.2.212		
 <table>
 
-<div align="center">
-<IMG SRC="https://github.com/dfchunsring/drdr/blob/master/imgang/SY-127.png?raw=true" width=880></a><br><h3>🌼必看 精彩视频 请直接点击 http://36.228.2.212</h3></div>
-
-<a href=https://git.io/duun><h4 align="right">探詢首頁</h4></a>
-
-
-[ <div align="center"><h2>【突破封锁看“2019圣诞及2020新年期间音乐会”】翻墙软件免费下载</h2></div>](https://git.io/ubc)
-
-<div align="center"><h2>请广传  请把握时间观赏  错过要再等一年</h2></div>
-
-<a href="#1"> <div align="center"><h2>【预告】新唐人圣诞新年期间播放神韵交响乐</h2></div></a><br>
-
-<div align="center">
-<IMG SRC="https://github.com/dfchunsring/arar/blob/master/fun.img/fun-a.jpg" width=880></a><br></div>
-<a name=list><b>目錄</b><p>
-<a href="#1">神韵交响乐</a><br>
-<a href="#2">收看新唐人神韵交响乐团的方法</a><br>
-<a href="#3">“传统之美”2019神韵交响乐波士顿落幕</a><br>
-<a href="#4">“与宇宙相连”指挥家赞神韵交响乐宏大无比</a><br>
-<a href="#5">2019神韵交响乐团 10月25日波士顿登场</a><br>
-<a href="#6">“乐器奏出的诗歌”神韵交响乐芝加哥获盛赞</a><br>
-<a href="#7">神韵交响乐 您不可错过的五大理由</a><br>
-
-<div align="center">
-<IMG SRC="https://github.com/dfchunsring/arar/blob/master/fun.img/fun-a.jpg" width=880></a><br></div>
-
-<a name=1><div align="center"><h1><a href="http://www.epochtimes.com/gb/19/12/15/n11723280.htm">神 韵 交 响 乐</a></h1></div></a><br>
-
-<h3>【大纪元2019年12月17日讯】2019年圣诞节和新年期间，新唐人电视台将独家播出《2018神韵交响乐团音乐会》，即分别在纽约、休斯顿、美西、大陆、欧洲频道播放。同时，新唐人网站（www.ntdtv.com）首页直播窗口和Roku也同步播放，时长90分钟。
-
-神韵交响乐是风靡全球的神韵艺术团原创作品，结合了东西方正统音乐的精髓，以西方管弦乐为基奠烘托中国乐器的特色，再现中华音乐传统、重现失传的美声唱法，每年都推出全新的原创曲目，带给观众盛大的音乐飨宴，好评如潮。</h3>
-
-<div align="center">
-<IMG SRC="https://github.com/dfchunsring/drdr/blob/master/imgang/SY-127.png?raw=true" width=880></a><br></div>
-
-<h3>“神韵的音乐非常灿烂，散发一种能量的光芒。非常不寻常的正面能量，有一种解脱、很安详的气氛，让人回到了反璞归真的感觉。”被列于“牛津世界音乐名人录”的国际钢琴家宋允鹏赞道。
-有着百年历史的罗曼德管弦乐团的首席小提琴家伯格丹．兹沃特安卢（Bogdan Zvoristeanu）赞叹：“音乐极为感人，古今结合的乐器演奏将我们带入另外的时空，带到那遥远的、非常干净、非常纯洁、充满真相的地方。”</h3>
-
-<h3>应观众要求，新唐人今年圣诞、新年期间将再次播出的《2018神韵交响乐团音乐会》，各频道播出时间：</h3>
-
-<div align="center"><h2>2019圣诞节期间<p></h2></div>
-
-
-<table>
-<div align="center"><h3>
-播出时间如下（均为当地时间）：<p></h3></div>
-
-<div align="center"><h2>《2018神韵交响乐团音乐会》播出时间<p>
- 
-大陆	<p></h2></div>
-<tr>
-	<td width=293;>日期</td>
-	<td width=293;>时间</td>
-	<td width=293;>备注</td>
-</tr>	
-<tr>
-	<td width=293;>星期二  12/24/2019     Tue</td>
-	<td width=293;>20:30</td>
-	<td width=293;>《神韵交响乐团音乐会》首播</td>
-</tr>		 
-
-<tr>
-	<td width=293;>星期三  12/25/2019    Wed</td>
-	<td width=293;>9:30</td>
-	<td width=293;>《神韵交响乐团音乐会》重播</td>
-</tr>		
-	<tr>
-	<td width=293;>星期三  12/25/2019    Wed</td>
-	<td width=293;>14:00</td>
-	<td width=293;>《神韵交响乐团音乐会》重播</td>
-</tr>	   
-</table>
-
-<div align="center"><h2>2020新年期间<p></h2></div>
-<div align="center"><h3>《2018神韵交响乐团音乐会》播出时间<p></h3></div>
-
-<table>
-	
-<tr>
-	<td width=293;>日期</td>
-	<td width=293;>时间</td>
-	<td width=293;>备注</td>
-</tr>	
-<tr>
-	<td width=293;>星期二  12/31/2019     Tue</td>
-	<td width=293;>20:00</td>
-	<td width=293;>《神韵交响乐团音乐会》首播</td>
-</tr>		 
-
-<tr>
-	<td width=293;>星期三  1/1/2020    Wed</td>
-	<td width=293;> 14:00</td>
-	<td width=293;>《神韵交响乐团音乐会》重播</td>
-</tr>		
-</table>
-
-<a href=#list><h5 align="right">回目錄</h5></a>
-<div align="center">
-<IMG SRC="https://github.com/dfchunsring/wer/blob/master/img-mf/b_simple_37_3M.png?raw=true" width=880></a><br></div>
-
-<table>
-
-<a name=2><div align="center"><h1>收看新唐人神韵交响乐团的方法<p></h1></div></b>
-
-<h3>	
-<tr>
-	<td width=490;>收视方法</td>
-	<td width=400;>软件下载</td>
-</tr>
-<tr>	
-	<td>1.大陆观众可通过韩星五号的新唐人中国频道收看</td>
-	<td><a href='https://git.io/2Ead'>播出参数</a></td>
-</tr>	
-	
-<tr>
-	<td>2.爱博电视桌机版(*特別推薦*)</td>
-	<td><a href='https://github.com/dfchunsring/drdr/blob/master/fg/Green_iPPOTV.exe?raw=true'>爱博电视IPPOTV </a></td>
-</tr>		
-
-<tr>
-	<td>3.通过翻墙软件</td>
-	<td><a href='https://github.com/dfchunsring/wer/blob/master/fq/fangqians.epub?raw=true'>下载详细说明书</a></td>
-</tr>
-
-<tr>
-	<td>点击下载翻墙软件</td>
-	<td><a href='https://github.com/dfchunsring/wer/blob/master/epgh.md'>翻墙软件下载</a></td>
-</tr>
-
-<tr>
-	<td>爱博电视安裝请看桌机板教学</td>
-	<td><a href='https://github.com/dfchunsring/drdr/blob/master/intdv-installation-teaching/iPPOTV.mp4?raw=true'>爱博桌机板教学 </a>
-</td>
-</tr>
-</h3>
-</table>
-
-<p><p><p><p>
-
-<IMG SRC="https://github.com/dfchunsring/drdr/blob/master/fg/INTDTV-1.png?raw=true" width=300>
-<td>
-<h3><a href='https://github.com/dfchunsring/drdr/blob/master/fg/iNTD_TV2.1.13.apk?raw=true'>新唐人安卓版 iNTD TV （Version: 2.1.13）</a> <p>
-StarP2P和新唐人联手推出新唐人安卓版，iNTD TV。新唐人安卓版 iNTD TV 可以用于安卓机顶盒，平板电脑，和手机。在安装安卓版 iNTD TV 后，中国大陆用户无需借助翻墙工具，可以直接通过安卓版 iNTD TV 收看新唐人直播或点播节目。</h3></td>
-
-<p><p>
-
-<IMG SRC="https://github.com/dfchunsring/drdr/blob/master/fg/IPPOTV944B2-2.png?raw=true" width=300>
-<td>
-<h3>爱博电视 (iPPOTV)</h3><p><p>
-<h3><a href='https://github.com/dfchunsring/drdr/blob/master/fg/Green_iPPOTV.exe?raw=true'>爱博电视PC版 (iPPOTV)</a></h3> <p>
-<h3>一款用于实时视频流共享的软件平台，高效稳定的视频传输技术带给用户崭新的视听体验。爱博电视具有突破封锁的得天独厚的优势。</h3></td>
-
-
-<p><p>
-
-<div align="center"><h2>特別推薦~  <a href='https://github.com/dfchunsring/drdr/blob/master/fg/Green_iPPOTV.exe?raw=true'>*爱博电视桌机版* </a></h2></div>
-
-
-<div align="center">
-<IMG SRC="https://github.com/dfchunsring/wer/blob/master/img-mf/b_simple_37_3M.png?raw=true" width=880></a><br></div>
-
-<table>
-
-<br />
-
-<div align="center"><h2>请收藏  https://git.io/dic 这个网址，随时再度访问这个页面。</h2> </div></br>
-  
-
-<div align="center"><h1>请先下载翻墙软件及爱博电视IPPOTV</h1></div>
-
-<h3>这场音樂会只限于中国大陆地区收看。 请通过翻墙软件自由门、无界浏览或iNTD TV看观
-，并请锁定中国频道这个网址：<a href="http://www.ntdtv.com/xtr/gb/tv_ch1china.html">http://www.ntdtv.com/xtr/gb/tv_ch1china.html</a><h3>
-
-</table>
-
-
-<br />
-
-<h3>大陆观众请通过翻墙软件自由门或无界浏览观看。还可通过卫星天线接收、爱博电视软件、新唐人安卓版、无界一点通等方式观看。</h3>
-
-<h4><a href='http://zh-tw.shenyun.com/'>海外观众如要观看最新的〝神韵晚会″，请到当地剧院买票观看，演出行程请查询：http://www.shenyun.com </a></h4>
-
-<h2>翻墙软件自由门'无界浏览。无界一点通最新版下载地址：<a href='https://github.com/dfchunsring/wer/blob/master/epgh.md'>（git.io/epf）</a></h2>
 
 <a href=#list><h5 align="right">回目錄</h5></a>
 
