--- a/sy13.md
+++ b/sy13.md
@@ -57,9 +57,10 @@
 <p>	
 </table>
 
-****************************************************************
+<div align="center">
+<IMG SRC="https://github.com/dfchunsring/arar/blob/master/fun.img/fun-a.jpg" width=880></a><br></div>
 	
-<table>
+
 
 <div align="center">
 <IMG SRC="https://github.com/dfchunsring/drdr/blob/master/imgang/SY-127.png?raw=true" width=880></a><br><h3>🌼必看 精彩视频 请直接点击 http://36.228.2.212</h3></div>
