--- a/sy13.md
+++ b/sy13.md
@@ -2,7 +2,7 @@
 <table>
 
 <div align="center">
-<IMG SRC="https://github.com/dfchunsring/drdr/blob/master/imgang/Sy1.jpg" width=850></a><br><h3>🌼必看 精彩视频 请直接点击 http://36.228.2.212		
+<IMG SRC="https://github.com/dfchunsring/arar/blob/master/sytp.img/Sy-2.jpg?raw=true" width=850></a><br><h3>🌼必看 精彩视频 请直接点击 http://220.141.125.164		
 </table>
 
 
